<resources>
    <string name="app_name">"Dooit"</string>
    <string name="connection_timed_out">"The connection timed out, please try again later"</string>
    <string name="connection_error">"A connection error occured, please try again later"</string>
    <string name="no_internet_connection">"No internet connection"</string>
    <string name="waiting_for_internet_connection">"Waiting for internet connection"</string>
    <string name="general_error">"An error occurred"</string>
    <string name="title_activity_main">""</string>
    <string name="title_activity_registration">"Registration"</string>
    <string name="title_activity_profile">"Profile"</string>
    <string name="title_activity_profile_image">"Upload Photo"</string>
    <string name="title_activity_settings">"Settings"</string>
    <string name="title_activity_build_info">"Build Info"</string>
    <string name="title_activity_terms_and_conditions">"Terms &amp; Conditions"</string>
    <string name="title_activity_privacy_policy">"Privacy Policy"</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">"Share"</string>
    <string name="action_favourite">"Favourite"</string>
    <string name="main_tab_text_0">"BINA"</string>
    <string name="main_tab_text_1">"TARGET"</string>
    <string name="main_tab_text_2">"CHALLENGE"</string>
    <string name="main_tab_text_3">"TIPS"</string>
    <string name="label_accept">"Accept"</string>
    <string name="label_cancel">"Cancel"</string>
    <string name="label_image_chooser_title">"Add Profile Photo!"</string>
    <string name="label_take_picture">"Take photo using camera"</string>
    <string name="label_select_gallery">"Select gallery"</string>
    <string name="label_select_picture">"Select picture"</string>
    <string name="label_check_result">"Check"</string>
    <string name="label_clear_content">"Clear"</string>
    <string name="label_continue">"Continue"</string>
    <string name="label_done">"Done"</string>
    <string name="label_loading">"Loading"</string>
    <string name="label_log_in">"Log in"</string>
    <string name="label_mobile_number">"Mobile number"</string>
    <string name="label_name">"Username"</string>
    <string name="label_email">"Email address"</string>
    <string name="label_next">"Next"</string>
    <string name="label_new_password">"New Password"</string>
    <string name="label_old_password">"Old Password"</string>
    <string name="label_password">"Password"</string>
    <string name="label_register">"Register"</string>
    <string name="label_change_name">"Change Name"</string>
    <string name="label_change_password">"Change Password"</string>
    <string name="label_change_email">"Change Email"</string>
    <string name="label_settings">"Settings"</string>
    <string name="label_build_info">@string/title_activity_build_info</string>
    <string name="label_share">"Share"</string>
    <string name="label_skip">"Skip"</string>
    <string name="label_start">"Start"</string>
    <string name="label_submit">"Submit"</string>
    <string name="label_try_again">"Try again"</string>
    <string name="label_uploading">"Uploading"</string>
    <string name="snackbar_dismiss">DISMISS</string>
    <string name="label_camera_permission_denied">"Permission required to take camera using camera"</string>
    <string name="label_gallery_permission_denied">"Permission required to access phone storage"</string>
    <string name="welcome_page_empty">"Welcome Page"</string>
    <string name="welcome_page_1">"Use Dooit to help you save money!"</string>
    <string name="welcome_page_2">"Monitor performance towards your savings goal!"</string>
    <string name="welcome_page_3">"Get rewards for your persistence in saving!"</string>
    <string name="lets_start">"let's start"</string>
    <string name="tips_tab_favourites">"Favourite"</string>
    <string name="tips_tab_all">"All"</string>
    <string name="tips_card_read_more">"Read more..."</string>
    <string name="tips_search_hint">"Search for: Topics, titles, tags, etc…"</string>
    <string name="tips_search_placeholder_fav">"Search favourite tips"</string>
    <string name="tips_search_placeholder_all">"Search all tips"</string>
    <string name="tips_article_opening">"Opening '%s'"</string>
    <string name="tips_article_add_fav">"Adding '%s' to favourites"</string>
    <string name="tips_article_remove_fav">"Removing '%s' from favourites"</string>
    <string name="tips_list_filter">"Filtering '%s'"</string>
    <string name="tips_no_tips_on_filter">"No tips were found for the current search"</string>
    <string name="error_retrieve_tips">"Error retrieving tips."</string>
    <string name="reg_t_c">"By clicking register, you are agreeing\n to our *Terms &amp; Condition*"</string>
    <string name="reg_error_invalid">"Please review the invalid fields"</string>
    <string name="reg_example_name">@string/login_example_name</string>
    <string name="reg_example_name_error_1">"Name can't be blank"</string>
    <string name="reg_example_name_error_2">"Name can't contain spaces"</string>
    <string name="reg_example_name_error_3">"Name can only contain letters and numbers"</string>
    <string name="reg_example_name_error_4">"Name can't be longer than 150 characters"</string>
    <string name="reg_options">"Please provide us with either your phone number or email address, or both"</string>
    <string name="reg_example_email">@string/login_example_email</string>
    <string name="reg_example_email_error_1">"Email can't be blank"</string>
    <string name="reg_example_email_error_2">"Email can't contain spaces"</string>
    <string name="reg_example_email_error_3">"Not a valid email address"</string>
    <string name="reg_example_email_error_4">"Email can't be longer than 150 characters"</string>
    <string name="reg_age">"How old are you?"</string>
    <string name="reg_example_age">"Example: 16"</string>
    <string name="reg_example_age_error_1">"Age can't be blank"</string>
    <string name="reg_gender">"Gender"</string>
    <string name="reg_gender_boy">"Boy"</string>
    <string name="reg_gender_girl">"Girl"</string>
    <string name="reg_example_number">"Example: 0813987654321"</string>
    <string name="reg_example_number_error_1">"Mobile Number can't be blank"</string>
    <string name="reg_example_number_error_2">"Mobile Number must be longer than 9 digits"</string>
    <string name="reg_example_number_error_3">"Mobile Number must be shorter than 15 digits"</string>
    <string name="reg_example_number_error_4">"Mobile Number contains illegal characters"</string>
    <string name="reg_example_password">"Must have at least 6 characters"</string>
    <string name="reg_example_password_error_1">"Password can't be blank"</string>
    <string name="reg_example_password_error_2">"Password must be longer than 6 characters"</string>
    <string name="already_registered_log_in">"Already registered? *Log in*"</string>
    <string name="forgot_password">"Forgot password?"</string>
    <string name="reg_progress_dialog_message">"Registering"</string>
    <string name="reg_duplicate_username_error">"A user with the username already exists"</string>
    <string name="login_title">@string/label_log_in</string>
    <string name="invalid_credentials">"Unable to log in with provided credentials."</string>
    <string name="login_name">@string/label_name</string>
    <string name="login_password">@string/label_password</string>
    <string name="login_example_name">"Example: Bina124"</string>
    <string name="login_example_name_error_1">"Name can't be blank"</string>
    <string name="login_example_email">"Example: aulia@gmail.com"</string>
    <string name="login_example_password">"Must have at least 6 characters"</string>
    <string name="login_example_password_error_1">"Password can't be blank"</string>
    <string name="login_progress_dialog_message">"Logging in"</string>
    <string name="login_not_registered">"Not registered? *Register*"</string>
    <string name="login_redirect_message">"You were logged out due to an authentication error"</string>
    <string name="bot_carousel_card_select">"Select"</string>
    <string name="bot_tip_intro">"$(tip.intro)"</string>
    <string name="bot_challenge_intro">"$(challenge.intro)"</string>
    <string name="bot_challenge_outro">"$(challenge.outro)"</string>
    <string name="of_target_amount">"of %s"</string>
    <string name="bot_general_end_done">"Thanks! I'm done for now."</string>
    <string name="bot_general_end_tips">"Take me to the tips, please."</string>
    <string name="bot_general_end_challenge">"Let’s take a challenge."</string>
    <string name="bot_general_end_budget_create">"Create my budget."</string>
    <string name="bot_general_end_budget_edit">"Edit my budget."</string>
    <string name="greeting">"Hola!"</string>
    <string name="goalIntroduction">"My Name is Bina. I'm gonna help  you save!"</string>
    <string name="goalGreeting">"Hello %s!"</string>
    <string name="goalNameCongrats">"That's a great goal!"</string>
    <string name="askGoalName">"Select the goal you want to save for, please."</string>
    <string name="askGoalNameInput">"What do you want to save for?"</string>
    <string name="askGoalImage">"Add an image for your savings goal to help keep you motivated"</string>
    <string name="askGoalImageTake">"Tap on the blue square…"</string>
    <string name="askGoalImageConfirm">"Add an image for your savings goal to help keep you motivated"</string>
    <string name="askKnowGoalAmount">"Do you know how much you need to save? "</string>
    <string name="askGoalAmount">"Great! Just type the amount that you want to save."</string>
    <string name="infoDontKnowAmount">"No problem."</string>
    <string name="askKnowGoalDate">"That is a big goal. Let us get saving then. Do you have a date that you want to save this by?"</string>
    <string name="askGoalDate">"When would you like to have saved this much?"</string>
    <string name="askGoalWeeklySaveAmount">"No problem, I can help. How much can money can you afford to save each week?"</string>
    <string name="askGoalSaveAmountOther">"How much can you save?"</string>
    <string name="askGoalPriorSave">"Have you started saving money towards this goal?"</string>
    <string name="askPriorSavedAmount">"How much have you already saved?"</string>
    <string name="verifyGoalAmount">"If you save %4$s %1$s each week you will save enough to get your %2$s in %3$s weeks."</string>
    <string name="validationFail">"Sorry, I do not understand that and have not been taught how to handle it yet."</string>
    <string name="validationFailDate">"Sorry, I do not understand that and have not  been taught how to handle it yet."</string>
    <string name="validationFailSaveAmountOther">"Sorry, I do not understand that and have not t been taught how to handle it yet."</string>
    <string name="target_save">"+ Deposit"</string>
    <string name="target_withdraw">"- Withdraw"</string>
    <string name="target_add_goal">"ADD GOAL"</string>
    <string name="target_savings_message" formatted="false">"Save %s each week to get your %s in %s weeks, %s days."</string>
    <string name="target_edit_savings_plan">"Edit Savings Plan"</string>
    <string name="target_savings_plan">"Savings Plan"</string>
    <string name="target_no_goal">"No goal added"</string>
    <string name="budget_heading_income_per_month">"Income per month"</string>
    <string name="budget_heading_savings_per_month">"Savings per month"</string>
    <string name="budget_heading_expenses_per_month">"Expenses per month"</string>
    <string name="budget_heading_left_over">Left over</string>
    <string name="heading_change_name">@string/label_change_name</string>
    <string name="heading_change_email">@string/label_change_email</string>
    <string name="target_prefix_saved">"saved"</string>
</resources>