<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view_bot_budget_info"
    android:layout_width="@dimen/bot_budget_card_width"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/bot_left_margin"
    android:padding="@dimen/bot_budget_card_padding"
    android:orientation="vertical"
    tools:background="@drawable/bkg_carousel_card"
    tools:context=".views.main.MainActivity">

    <!-- Income -->

    <TextView
        android:id="@+id/item_view_bot_budget_info_heading_income_per_month"
        style="@style/AppTheme.TextView.Bold.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/divider"
        android:text="@string/budget_heading_income_per_month" />

    <ProgressBar
        android:id="@+id/item_view_bot_budget_info_progress_income"
        style="@style/BudgetProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        tools:progress="70"
        tools:secondaryProgress="60" />

    <!-- Savings -->

    <TextView
        android:id="@+id/item_view_bot_budget_info_heading_savings_per_month"
        style="@style/AppTheme.TextView.Bold.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/divider"
        android:text="@string/budget_heading_savings_per_month" />

    <ProgressBar
        android:id="@+id/item_view_bot_budget_info_progress_savings"
        style="@style/BudgetProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        tools:progress="70"
        tools:secondaryProgress="60" />

    <!-- Expenses -->

    <TextView
        android:id="@+id/item_view_bot_budget_info_heading_expenses_per_month"
        style="@style/AppTheme.TextView.Bold.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/divider"
        android:text="@string/budget_heading_expenses_per_month" />

    <org.gem.indo.dooit.views.custom.DesignSafeRecyclerView
        android:id="@+id/item_view_bot_budget_info_recycler_view_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"/>

    <!-- Left Over -->

    <TextView
        android:id="@+id/item_view_bot_budget_info_heading_left_over"
        style="@style/AppTheme.TextView.Bold.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/divider"
        android:text="@string/budget_heading_left_over" />

    <ProgressBar
        android:id="@+id/item_view_bot_budget_info_progress_left_over"
        style="@style/BudgetProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot_budget_vertical_padding"
        tools:progress="70"
        tools:secondaryProgress="60" />

</LinearLayout>