<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_target"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.gem.indo.dooit.views.main.fragments.target.TargetFragment">


    <RelativeLayout
        android:id="@+id/fragment_target_loading_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/fragment_target_loading_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_target_loading_progress"
            android:layout_centerHorizontal="true"
            android:text="@string/label_loading"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_target_no_goals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/no_goal"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-20dp"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.TextView.Bold.Large"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/fragment_target_add_goal_button"
            android:text="@string/target_no_goal"/>

        <Button
            android:id="@+id/fragment_target_add_goal_button"
            style="@style/AppTheme.Button.Big.Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="24dp"
            android:text="@string/target_add_goal" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/fragment_target_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/fragment_target_withdraw_button"
                android:layout_alignParentTop="true"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/fragment_target_goal_name_text_view"
                style="@style/AppTheme.TextView.Regular.XXXLarge"
                android:layout_width="match_parent"
                fontPath="fonts/LondrinaSolid-Regular.ttf"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Goal Name" />

            <android.support.v4.view.ViewPager
                android:id="@+id/fragment_target_targets_view_pagers"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@+id/fragment_target_goal_name_text_view"
                android:layout_marginTop="18dp" />

            <ImageButton
                android:id="@+id/fragment_target_left_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/fragment_target_targets_view_pagers"
                android:layout_alignStart="@+id/fragment_target_targets_view_pagers"
                android:layout_alignTop="@+id/fragment_target_targets_view_pagers"
                android:layout_gravity="center_vertical|start"
                android:background="?android:selectableItemBackground"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_d_left_chevron"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/fragment_target_right_image_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/fragment_target_targets_view_pagers"
                android:layout_alignEnd="@+id/fragment_target_targets_view_pagers"
                android:layout_alignTop="@+id/fragment_target_targets_view_pagers"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackground"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_d_right_chevron"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/fragment_target_saved"
                style="@style/AppTheme.TextView.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/fragment_target_targets_view_pagers"
                android:gravity="center_horizontal"
                android:text="@string/target_prefix_saved"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_target_saved_text_view"
                style="@style/AppTheme.TextView.Regular.XXXLarge"
                fontPath="fonts/LondrinaSolid-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_target_saved"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="$ 38.000" />

            <TextView
                android:id="@+id/fragment_target_total_text_view"
                style="@style/AppTheme.TextView.Bold.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/fragment_target_saved_text_view"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="of $ 50.000" />

            <Button
                android:id="@+id/fragment_target_deposit_button"
                style="@style/AppTheme.Button.Big.LightBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_target_total_text_view"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                android:text="@string/target_save" />

            <Button
                android:id="@+id/fragment_target_withdraw_button"
                style="@style/AppTheme.Button.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_target_deposit_button"
                android:layout_gravity="center"
                android:text="@string/target_withdraw"
                android:textColor="@color/fragment_target_withdraw_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_target_savings_plan"
                style="@style/AppTheme.TextView.Bold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/target_savings_plan"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_target_savings_plan_message"
                style="@style/AppTheme.TextView.Regular.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_target_savings_plan"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/target_savings_message"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fragment_target_savings_plan_edit"
                style="@style/AppTheme.TextView.Bold.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_target_savings_plan_message"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:text="@string/target_edit_savings_plan"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textAllCaps="true"
                android:textColor="@color/grey"/>

            <!-- Dummy textview so previous marginBottom works -->
            <TextView
                android:id="@+id/dummy_spacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_target_savings_plan_edit"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
